# sparse-matrix-solver

./: .gitignore  README.md
cpp-backend/src/: SparseMatrixGenerator.cpp  SparseMatrixGenerator.h  main.cpp
nuxt-frontend/: nuxt.config.js  package-lock.json  package.json
nuxt-frontend/pages/: index.vue
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
