[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.5-rc", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
rocket_cors = "0.5"

